# trafficserver

./: .gitignore  CMakeLists.txt  Makefile.am  README  configure.ac
cmd/traffic_cache_tool/: CacheDefs.h  CacheTool.cc  Command.cc  Command.h  Makefile.am
cmd/traffic_cop/: traffic_cop.cc
cmd/traffic_layout/: engine.cc  engine.h  info.cc  info.h  traffic_layout.cc
cmd/traffic_manager/: StatType.cc  WebOverview.cc  traffic_manager.cc
cmd/traffic_si/: CacheBase.h  Makefile.am  traffic_si  traffic_si.cc
cmd/traffic_top/: Makefile.am  stats.h  traffic_top.cc
configs/: records.config.default.in
doc/: Makefile.am
doc/ext/: traffic-server.py
doc/release-notes/: upgrading.en.rst
doc/uml/: accept_classes.plantuml  accept_probe.plantuml  host-resolve.plantuml  remap-yaml.plantuml
example/: Makefile.am
example/blacklist-1/: blacklist-1.c
example/client_context_dump/: client_context_dump.cc
example/cppapi/transactionhook/: TransactionHookPlugin.cc
example/lifecycle-plugin/: lifecycle-plugin.c
example/lifecycle_plugin/: lifecycle_plugin.c
example/plugins/c-api/protocol/: TxnSM.c
example/priority-plugin/: priority-plugin.c
example/remap/: remap.cc
example/ssl-preaccept/: ssl-preaccept.cc
example/ssl_preaccept/: ssl_preaccept.cc
example/thread-pool/: psi.c
example/tscpp/async_http_fetch/: AsyncHttpFetch.cc
example/tscpp/async_http_fetch_streaming/: AsyncHttpFetchStreaming.cc
example/tscpp/async_timer/: AsyncTimer.cc
example/tscpp/boom/: boom.cc
example/tscpp/clientredirect/: ClientRedirect.cc
example/tscpp/clientrequest/: ClientRequest.cc
example/tscpp/custom_error_remap_plugin/: CustomErrorRemapPlugin.cc
example/tscpp/customresponse/: CustomResponse.cc
example/tscpp/delay_transformation_plugin/: DelayTransformationPlugin.cc
example/tscpp/globalhook/: GlobalHookPlugin.cc
example/tscpp/gzip_transformation/: GzipTransformationPlugin.cc
example/tscpp/helloworld/: HelloWorldPlugin.cc
example/tscpp/intercept/: intercept.cc
example/tscpp/internal_transaction_handling/: InternalTransactionHandling.cc
example/tscpp/logger_example/: LoggerExample.cc
example/tscpp/multiple_transaction_hooks/: MultipleTransactionHookPlugins.cc
example/tscpp/null_transformation_plugin/: NullTransformationPlugin.cc
example/tscpp/post_buffer/: PostBuffer.cc
example/tscpp/remap_plugin/: RemapPlugin.cc
example/tscpp/serverresponse/: ServerResponse.cc
example/tscpp/stat_example/: StatExample.cc
example/tscpp/timeout_example/: TimeoutExamplePlugin.cc
example/tscpp/transactionhook/: TransactionHookPlugin.cc
example/tscpp/websocket/: WSBuffer.cc  WebSocket.cc  WebSocket.h
include/: Makefile.am
include/ts/: Makefile.am  apidefs.h.in  ts.h
include/tscore/: BufferWriter.h  CryptoHash.h  SourceLocation.h  ink_inet.h  ink_resolver.h  ink_time.h  ts_file.h
include/tscpp/: Async.h  AsyncHttpFetch.h  AsyncTimer.h  CaseInsensitiveStringComparator.h  ClientRequest.h  Continuation.h  GlobalPlugin.h  GzipDeflateTransformation.h  GzipInflateTransformation.h  Headers.h  HttpMethod.h  HttpStatus.h  HttpVersion.h  InterceptPlugin.h  Logger.h  Plugin.h  PluginInit.h  RemapPlugin.h  Request.h  Response.h  Stat.h  Transaction.h  TransactionPlugin.h  TransformationPlugin.h  Url.h  noncopyable.h  utils.h
iocore/aio/: AIO.cc  Makefile.am  P_AIO.h
iocore/cache/: Cache.cc  CacheDir.cc  CacheHttp.cc  CacheLink.cc  CachePages.cc  CachePagesInternal.cc  CacheRead.cc  CacheStripe.cc  CacheVol.cc  CacheWrite.cc  I_Cache.h  I_CacheDefs.h  I_Store.h  Makefile.am  P_Cache.h  P_CacheArray.h  P_CacheBC.h  P_CacheDir.h  P_CacheHttp.h  P_CacheInternal.h  P_CacheVol.h
iocore/cluster/: ClusterCache.cc  ClusterHandlerBase.cc  ClusterVConnection.cc  P_Cluster.h  P_ClusterCache.h
iocore/dns/: DNS.cc  DNSConnection.cc  I_DNSProcessor.h  Makefile.am  P_DNSConnection.h  P_DNSProcessor.h
iocore/eventsystem/: IOBuffer.cc  I_Action.h  I_Continuation.h  I_EThread.h  I_EventProcessor.h  I_EventSystem.h  I_IOBuffer.h  I_Lock.h  I_MIOBufferWriter.h  I_Tasks.h  I_Thread.h  I_VConnection.h  MIOBufferWriter.cc  Makefile.am  P_IOBuffer.h  P_Thread.h  P_UnixEThread.h  P_UnixEventProcessor.h  Tasks.cc  Thread.cc  UnixEThread.cc  UnixEventProcessor.cc
iocore/hostdb/: HostDB.cc  I_HostDBProcessor.h  Makefile.am  P_HostDBProcessor.h  P_RefCountCache.h  P_RefCountCacheSerializer.h  test_RefCountCache.cc
iocore/net/: Connection.cc  I_NetProcessor.h  I_NetVConnection.h  I_SessionAccept.h  LuaSNIConfig.cc  LuaSNIConfig.h  Makefile.am  OCSPStapling.cc  P_Connection.h  P_NetAccept.h  P_NetVConnection.h  P_SNIActionPerformer.h  P_SSLCertLookup.h  P_SSLConfig.h  P_SSLNetVConnection.h  P_SSLSNI.h  P_SSLUtils.h  P_Socks.h  P_UnixNet.h  P_UnixNetVConnection.h  ProxyProtocol.cc  ProxyProtocol.h  SNIActionPerformer.cc  SSLCertLookup.cc  SSLClientUtils.cc  SSLConfig.cc  SSLNetProcessor.cc  SSLNetVConnection.cc  SSLNextProtocolSet.cc  SSLSNIConfig.cc  SSLSessionCache.h  SSLUtils.cc  Socks.cc  UnixNet.cc  UnixNetAccept.cc  UnixNetPages.cc  UnixNetProcessor.cc  UnixNetVConnection.cc  UnixUDPNet.cc  YamlSNIConfig.cc
iocore/utils/: Makefile.am
lib/: Makefile.am
lib/cppapi/: AsyncTimer.cc  GlobalPlugin.cc  InterceptPlugin.cc  Plugin.cc  Request.cc  Transaction.cc  TransactionPlugin.cc  utils_internal.cc
lib/records/: I_RecCore.h  I_RecDefs.h  I_RecHttp.h  I_RecLocal.h  I_RecProcess.h  Makefile.am  P_RecCore.cc  P_RecCore.h  P_RecDefs.h  (+16 more)
mgmt/: Alarms.cc  Alarms.h  DerivativeMetrics.cc  DerivativeMetrics.h  FileManager.cc  LocalManager.cc  LocalManager.h  Makefile.am  RecordsConfig.cc  RecordsConfigUtils.cc  Rollback.cc  WebMgmtUtils.cc
plugins/: Makefile.am
proxy/: ControlBase.cc  ICP.cc  ICPConfig.cc  IPAllow.cc  IPAllow.h  InkAPI.cc  InkAPIInternal.h  InkAPITest.cc  InkIOCoreAPI.cc  Main.cc  Makefile.am  ParentSelection.cc  Plugin.cc  Plugin.h  PluginVC.cc  PluginVC.h  Prefetch.cc  Prefetch.h  ProxyClientSession.cc  ProxyClientSession.h  ProxyClientTransaction.h  Show.h  StatPages.h  Transform.cc
rc/: trafficserver.service.in
tests/: README.md  bootstrap.py
tools/: Makefile.am
(+536 files in other folders)
